--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -22,16 +22,82 @@
             {% for workout in workouts %}
             <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">{{workout.workout_title}}</h4>
-                <p class="list-group-item-text">{{workout.workout_text}}</p>
+                <p class="list-group-item-text">{{workout.workout_text|ellipsify}}</p>
+
+                <h0 style='display:none'>{{workout.workout_id}}</h0>
+                <h1 style='display:none'>{{workout.workout_text}}</h1>
+                <h2 style='display:none'>{{workout.start_date}}</h2>
+                <h3 style='display:none'>{{workout.end_date}}</h3>
             </a>
             {% endfor %}
         </div>
 
         <div id="coders-list" class="list-group tab-pane" role="tabpanel">
             {% for user in coders %}
-            <a href="#" class="list-group-item"> {{user.first_name}} - {{user.last_name}}</a> {% endfor %}
+            <a href="#" class="list-group-item"> {{user.first_name}} - {{user.last_name}}</a> 
+            {% endfor %}
         </div>
     </div>
 
 </div>
 {% endblock %} 
+
+{% block page-scripts %}
+<script type="text/javascript">
+    var username = "{{user.username}}";
+    var userId = "{{user.user_id}}";
+    
+    function isEmpty(str) {
+        return (!str || 0 === str.length);
+    }
+
+    function hideErrorFields() {
+        jQuery('#workoutTitleDiv .error').hide();
+        jQuery('#workoutDescDiv .error').hide();
+
+        jQuery('#startDateDiv .error').hide();
+        jQuery('#endDateDiv .error').hide();
+    }
+
+    function forWorkoutClicked() {
+        jQuery('#workouts-list .list-group-item').each(function(i) {
+            //var $this = $(this);
+            var aWorkoutDiv = $(this);
+            aWorkoutDiv.click(function() {
+                console.log("a list item clicked.");
+
+                var workoutId = $(this).find('h0').text();
+                var workoutTitle = $(this).find('h4').text();
+                var workoutDesc = $(this).find('h1').text();
+                var workoutStart = $(this).find('h2').text();
+                var workoutEnd = $(this).find('h3').text();
+                console.log("Workout title: " + workoutTitle + ", workout desc: " + workoutDesc 
+                             + ", start: " + workoutStart + ", end: " + workoutEnd);
+    
+                //----
+                jQuery.get('customTemplates/viewWorkout.html', function(data) {
+                    jQuery('#viewWorkoutModal').remove();
+
+                    jQuery('#mainBody').append(data);
+                    jQuery('#viewWorkoutModal').modal('show');
+
+                    jQuery('#viewWorkoutModal h4').text(workoutTitle);
+
+                    jQuery('#viewWorkoutModal').find('textarea[name=workoutDesc]').text(workoutDesc);
+                    jQuery('#viewWorkoutModal').find('input[name=startDateInput]').val(workoutStart);
+                    jQuery('#viewWorkoutModal').find('input[name=endDateInput]').val(workoutEnd);
+
+                    jQuery('#viewWorkoutModal input[type=text], #viewWorkoutModal textarea').prop('readonly', true);
+                    jQuery('#viewWorkoutModal .modal-footer').remove();
+                }, "text");
+            });
+        });
+    }
+
+    jQuery(document).ready(function() {
+        forWorkoutClicked();
+    });
+</script>
+
+{% endblock %}
+
