Made errors display on home view when trying to make a submission to a workout

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -263,8 +263,8 @@
         OnCreateWorkOutClick();
         forWorkoutClicked();
 
-    {% if :_error %}
-        alert("{{:_error}}");
+    {% if _error %}
+        alert("{{_error}}");
     {% endif %}
 
     {%if :_error %}
